--- a/photos.html
+++ b/photos.html
@@ -42,13 +42,13 @@
 	     <div class="row jumbotron bgred tcolorwhite">
           <h1 class="talignc font2">Before</h1>
       		<div class="col-sm-4 bgred tcolorwhite">
-      			<img src="Before1.jpg" alt="Before1" class="margin">
+      			<img src="Before1.JPG" alt="Before1" class="margin">
       		</div>
       		<div class="col-sm-4 bgred tcolorwhite">
-      			<img src="Before2.jpg" alt="Before2" class="margin">
+      			<img src="Before2.JPG" alt="Before2" class="margin">
       		</div>
       		<div class="col-sm-4 bgred tcolorwhite">
-      			<img src="Before3.jpg" alt="Before3" class="margin">
+      			<img src="Before3.JPG" alt="Before3" class="margin">
       		</div>
 	     </div>
      </div>
@@ -58,13 +58,13 @@
        <div class="row jumbotron bgred tcolorwhite">
           <h1 class="talignc font2">After</h1>
           <div class="col-sm-4 bgred tcolorwhite">
-            <img src="After1.jpg" alt="After1" class="margin">
+            <img src="After1.JPG" alt="After1" class="margin">
           </div>
           <div class="col-sm-4 bgred tcolorwhite">
-            <img src="After2.jpg" alt="After2" class="margin">
+            <img src="After2.JPG" alt="After2" class="margin">
           </div>
           <div class="col-sm-4 bgred tcolorwhite">
-            <img src="After3.jpg" alt="After3" class="margin">
+            <img src="After3.JPG" alt="After3" class="margin">
           </div>
        </div>
      </div>
