--- a/index.html
+++ b/index.html
@@ -48,8 +48,17 @@
 
           We will arrange the sale or donation of surplus items, pack items for storage, inventory and photograph items and arrange heirloom shipping. </p>
     </div>
-
     <br>
+    <br>
+
+    <div class="container talignc">
+      <img src="MessyHouse.JPEG" alt="Example">
+      <br>
+      <p class="font">Does you home look like this? Not sure where to start? No time for a substantial clean up?We can help!</p>
+    </div>
+    <br>
+    <br>
+
     <div class="container talignc">
       <img src="BusinessCard.png" alt="BusinessCard" width="40%" height="40%">
     </div>
