--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <br>
 
     <div class="container talignc">
-      <img src="MessyHouse.JPEG" alt="Example">
+      <img src="MessyHouse.JPG" alt="Example">
       <br>
       <p class="font">Does you home look like this? Not sure where to start? No time for a substantial clean up?We can help!</p>
     </div>
