--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <br>
 
     <div class="container talignc">
-      <img src="MessyHouse.JPG" alt="Example">
+      <img src="MessyHouse.JPG" alt="Example" width="40%" height="40%">
       <br>
-      <p class="font">Does you home look like this? Not sure where to start? No time for a substantial clean up?We can help!</p>
+      <p class="main tcolorwhite">Does you home look like this? Not sure where to start? No time for a substantial clean up?We can help!</p>
     </div>
     <br>
     <br>
@@ -65,3 +65,4 @@
   <br>
   </body>
 </html>
+40%
