--- a/socialmedia.html
+++ b/socialmedia.html
@@ -33,7 +33,7 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
           <ul class="nav navbar-nav">
-            <li class="font"><a href="index.html">What We Do <span class="sr-only">(current)</span></a></li>
+            <li class="font"><a href="index.html">What We Do</a></li>
             <li class="font"><a href="photos.html">Photo Gallery</a></li>
             <li class="active font"><a href="socialmedia.html">Social Media</a></li>
           </ul>
