--- a/index.html
+++ b/index.html
@@ -39,14 +39,7 @@
     </div>
 
     <div class="container-fluid tcolorwhite talignc">
-        <p class="main">Homeshapers are specialists in home organization and staging.
-
-          Are you moving? Downsizing? Helping grandma move into senior's housing?
-          We can help you get your home into shape!
-
-          Our team has experience in helping people just like you, get organized.
-
-          We will arrange the sale or donation of surplus items, pack items for storage, inventory and photograph items and arrange heirloom shipping. </p>
+        <p class="main">Homeshapers are specialists in home organization and staging. Are you moving? Downsizing? Helping grandma move into senior's housing? We can help you get your home into shape! Our team has experience in helping people just like you, get organized. We will arrange the sale or donation of surplus items, pack items for storage, inventory and photograph items and arrange heirloom shipping. </p>
     </div>
     <br>
     <br>
@@ -54,7 +47,8 @@
     <div class="container talignc">
       <img src="MessyHouse.JPG" alt="Example" width="40%" height="40%">
       <br>
-      <p class="main tcolorwhite">Does you home look like this? Not sure where to start? No time for a substantial clean up?We can help!</p>
+      <br>
+      <p class="main tcolorwhite">Does you home look like this? Not sure where to start? No time for a substantial clean up? We can help!</p>
     </div>
     <br>
     <br>
