--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <br>
     <br>
-
+    <!-- This image is not copyrighted by HomeShapers.ca as of 2017/11/20 -->
     <div class="container talignc">
       <img src="MessyHouse.JPG" alt="Example" width="40%" height="40%">
       <br>
