--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <br>
     <!-- This image is not copyrighted by HomeShapers.ca as of 2017/11/20 -->
     <div class="container talignc">
-      <img src="MessyHouse.JPG" alt="Example" width="40%" height="40%">
+      <!--<img src="MessyHouse.JPG" alt="Example" width="40%" height="40%">-->
       <br>
       <br>
       <p class="main tcolorwhite">Does you home look like this? Not sure where to start? No time for a substantial clean up? We can help!</p>
