--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" type="text/css" href="main.css" >
     <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+    <meta name="description" content="Homeshapers are specialists in home organization and staging. Are you moving? Downsizing? Helping grandma move into senior's housing? We can help you get your home into shape! Our team has experience in helping people just like you, get organized. We will arrange the sale or donation of surplus items, pack items for storage, inventory and photograph items and arrange heirloom shipping.">
+    <meta name="keywords" content="HomeShapers, Home Shapers, Interior Decoration, Organization, Home Organization, Staging, Home Staging">
+    <meta name="author" content="Michael Jans">
     <title>HomeShapers</title>
   </head>
 
