--- a/socialmedia.html
+++ b/socialmedia.html
@@ -49,7 +49,7 @@
       		<div class="col-sm-7 jumbotron bgred tcolorwhite talignc">
             <h1 class="font">Contact Me</h1>
             <br>
-            <p class="font">You can reach me with my cellphone number @ (780)-914-5455, or by emailing me @ HomeShapers1@gmail.com</p>
+            <p class="font">You can reach me with cellphone number or email</p> <p class="font">(780)-914-5455</p> <p class="font">HomeShapers1@gmail.com</p>
       		</div>
 	     </div>
      </div>
